Close issue Template 'aroundYouSmall' - not visible on iOS device #101

--- a/meteor-app/packages/bz-main/client/browser/style/foundation-datepicker.css
+++ b/meteor-app/packages/bz-main/client/browser/style/foundation-datepicker.css
@@ -24,8 +24,8 @@
     -webkit-background-clip: padding-box;
     -moz-background-clip: padding;
     background-clip: padding-box;
-    *border-right-width: 2px;
-    *border-bottom-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
     color: #333;
     font-size: 13px;
     line-height: 18px; }
